docs/releases/v0.4.1/npm-publication.md
# npm publication evidence for v0.4.1

Status: published

This file is generated by `close-release-publication` from public GitHub, npm, and npx evidence.

```yaml
publication:
  package: "@xiongxianfei/rigorloop"
  version: "0.4.1"
  release_tag: "v0.4.1"
  mode: "trusted-publishing"
  status: "published"

workflow:
  release_workflow: ".github/workflows/release.yml"
  published_by_workflow: true
  unsupported_tags_rejected: true

tarball:
  filename: "xiongxianfei-rigorloop-0.4.1.tgz"
  sha256: "not-recorded-for-trusted-publishing"
  pack_command: "npm pack --prefix packages/rigorloop"
  content_check: "pass"
  smoke_result: "pass"

trusted_publishing:
  configured: true
  workflow: ".github/workflows/release.yml"
  id_token_write: true

bootstrap:
  used: false
  approving_maintainer: "not-applicable"
  publish_command: "not-applicable"

github:
  release_url: "https://github.com/xiongxianfei/rigorloop/releases/tag/v0.4.1"

npm:
  published: true
  package_url: "https://www.npmjs.com/package/@xiongxianfei/rigorloop/v/0.4.1"
  published_at: "2026-08-12T17:22:36.938Z"
  dist_tag_latest: "0.4.1"
  integrity: "sha512-LirvoWL0s9jCn4cChTIr/NtSa5x/c77BRx7IqYa2JuKYdgQdQYlFKh2eiLNVE3EEU79HYuYoxSCg+13HWTToBA=="
  tarball: "https://registry.npmjs.org/@xiongxianfei/rigorloop/-/rigorloop-0.4.1.tgz"

version_smoke:
  command: "npx @xiongxianfei/rigorloop@0.4.1 version"
  result: "pass"
  output_summary: "@xiongxianfei/rigorloop 0.4.1"

target_init_smoke:
  codex:
    command: "npx @xiongxianfei/rigorloop@0.4.1 init codex"
    npm_version: "0.4.1"
    package_source: "npm public registry"
    target: "codex"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.4.1/rigorloop-adapter-codex-v0.4.1.zip"
    archive_sha256: "sha256:78c67a10bf80c6beb69dfcea10746c4d66548af31059cd029c952537e11d8df9"
    installed_roots: ".agents/skills"
    tree_hashes: "sha256:31e64617e5548f29d5cedc8b5c5e37a7e1a8dde79ddfda8de122afd7071cc133"
    file_counts: "75"
    command_output_summary: "RigorLoop initialized with verified Codex target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  claude:
    command: "npx @xiongxianfei/rigorloop@0.4.1 init claude"
    npm_version: "0.4.1"
    package_source: "npm public registry"
    target: "claude"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.4.1/rigorloop-adapter-claude-v0.4.1.zip"
    archive_sha256: "sha256:bf9ebd15e55978ec3eb561937a829877d29bb05901478f36cb3ee407f3360e58"
    installed_roots: ".claude/skills"
    tree_hashes: "sha256:ea318493c89cbdeb4ccecd335ebcff9309959f41d2835341db7712e0db7e6fad"
    file_counts: "75"
    command_output_summary: "RigorLoop initialized with verified Claude Code target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  opencode:
    command: "npx @xiongxianfei/rigorloop@0.4.1 init opencode"
    npm_version: "0.4.1"
    package_source: "npm public registry"
    target: "opencode"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.4.1/rigorloop-adapter-opencode-v0.4.1.zip"
    archive_sha256: "sha256:33e4bf91ebc76c626e73dd6c4a4a0a832d491a8bd0fa43dc319cd35cb5899afc"
    installed_roots: ".opencode/skills;.opencode/commands"
    tree_hashes: ".opencode/skills=sha256:ea318493c89cbdeb4ccecd335ebcff9309959f41d2835341db7712e0db7e6fad;.opencode/commands=sha256:440cbdafa6ef691c559025b698b0c4fc7aeb5e1b57d85580380a11845f348761"
    file_counts: ".opencode/skills=75;.opencode/commands=10"
    command_output_summary: "RigorLoop initialized with verified opencode target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false
```

| Target | Command | npm version | Package source | Public archive URL | Installed root(s) | Tree hash value(s) | File count(s) | Command output summary | Archive verified | Tree verified | Result | Closeout blocker |
|---|---|---|---|---|---|---|---|---|---|---|---|---|
| codex | `npx @xiongxianfei/rigorloop@0.4.1 init codex` | `0.4.1` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.4.1/rigorloop-adapter-codex-v0.4.1.zip | .agents/skills | sha256:31e64617e5548f29d5cedc8b5c5e37a7e1a8dde79ddfda8de122afd7071cc133 | 75 | RigorLoop initialized with verified Codex target support. | true | true | pass | none |
| claude | `npx @xiongxianfei/rigorloop@0.4.1 init claude` | `0.4.1` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.4.1/rigorloop-adapter-claude-v0.4.1.zip | .claude/skills | sha256:ea318493c89cbdeb4ccecd335ebcff9309959f41d2835341db7712e0db7e6fad | 75 | RigorLoop initialized with verified Claude Code target support. | true | true | pass | none |
| opencode | `npx @xiongxianfei/rigorloop@0.4.1 init opencode` | `0.4.1` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.4.1/rigorloop-adapter-opencode-v0.4.1.zip | .opencode/skills;.opencode/commands | .opencode/skills=sha256:ea318493c89cbdeb4ccecd335ebcff9309959f41d2835341db7712e0db7e6fad;.opencode/commands=sha256:440cbdafa6ef691c559025b698b0c4fc7aeb5e1b57d85580380a11845f348761 | .opencode/skills=75;.opencode/commands=10 | RigorLoop initialized with verified opencode target support. | true | true | pass | none |
